--- a/app/imports/ui/stylesheets/style.css
+++ b/app/imports/ui/stylesheets/style.css
@@ -1,3 +1,8 @@
 body {
   padding-top: 75px;  /* Move body of page below navbar. */
 }
+
+.ui.button{
+  border-color: gray;
+  background-color: white;
+}
