header+footer updated

--- a/app/imports/ui/layouts/footer.html
+++ b/app/imports/ui/layouts/footer.html
@@ -2,9 +2,10 @@
   <footer>
     <div style="padding-top: 15px" class="ui center aligned container">
         <hr>
-        Developed by Anthony Kuloloia <br />
+        Developed by GetGood <br />
+        Justin Chock | Dylan Pavao | Anthony Kuloloia | Daniel Koo <br/>
         ICS 314<br />
-        University of Hawaii
+        University of Hawaii at Manoa
     </div>
   </footer>
 </template>
