--- a/app/imports/ui/layouts/header.html
+++ b/app/imports/ui/layouts/header.html
@@ -5,16 +5,15 @@
     {{#if currentUser}}
       <div class="item"><h1>Get Good</h1></div>
       <a class="item" href="{{pathFor 'User_Home_Page'}}">Home</a>
-      <a class="item" href="{{pathFor 'Admin_Home_Page'}}">Admin Home</a>
+      <!--<a class="item" href="{{pathFor 'Admin_Home_Page'}}">Admin Home</a>-->
       <a class="item" href="{{pathFor 'User_Profile_Page'}}">Profile</a>
       <a class="item" href="{{pathFor 'events'}}">Calendar</a>
       <a class="item" href="{{pathFor 'Rankings_Page'}}">Rankings</a>
-      <div class="right item"><p>Welcome back, {{ user }}</p></div>
+      <div class="right item"><p>Welcome, {{ user }}</p></div>
       {{> Cas_Login }}
     {{else}}
       <a class="item" href="{{pathFor 'Public_Landing_Page'}}"><h1>Get Good</h1></a>
-      <a class="right item"></a>
-      {{> Cas_Login }}
+      <a class="right item"><p>{{> Cas_Login }}</p></a>
     {{/if}}
     </div>
   </div>
