--- a/app/imports/ui/layouts/cas-login.html
+++ b/app/imports/ui/layouts/cas-login.html
@@ -1,6 +1,6 @@
 <template name="Cas_Login">
   <div class="ui simple dropdown item">
-    <div class="text">Account</div>
+    <div class="text">Welcome {{ user }}</div>
     <i class="dropdown icon"></i>
     <div class="menu">
       {{#if currentUser}}
@@ -12,3 +12,21 @@
   </div>
 
 </template>
+
+<!--<template name="Cas_Login">-->
+  <!--<div class="ui simple dropdown item">-->
+    <!--{{#if currentUser}}-->
+      <!--<div class="text">Welcome, {{ user }}</div>-->
+      <!--<i class="dropdown icon"></i>-->
+    <!--<div class="menu">-->
+      <!--<div class="item cas-logout">Logout</div>-->
+    <!--{{else}}-->
+      <!--<div class="text">Welcome</div>-->
+      <!--<i class="dropdown icon"></i>-->
+    <!--<div class="menu">-->
+      <!--<div class="item cas-login">Login</div>-->
+    <!--{{/if}}-->
+  <!--</div>-->
+  <!--</div>-->
+
+<!--</template>-->
