--- a/app/imports/ui/stylesheets/style.css
+++ b/app/imports/ui/stylesheets/style.css
@@ -1,8 +1,22 @@
 body {
-
+  padding-top: 85px;
 }
 
 .ui.button{
   border-color: black;
   background-color: white;
+}
+
+.circ {
+  /*display: block;*/
+  height: 15px;
+  width: 20px;
+  /*line-height: 15px;*/
+
+  /*-moz-border-radius: 50%; !* or 50% *!*/
+  border-radius: 50%; /* or 50% */
+
+  background-color: red;
+  color: white;
+  text-align: center;
 }
