--- a/app/imports/ui/layouts/cas-login.html
+++ b/app/imports/ui/layouts/cas-login.html
@@ -1,12 +1,14 @@
 <template name="Cas_Login">
   <div class="ui simple dropdown item">
-    <div class="text">Welcome {{ user }}</div>
+    <div class="text">Welcome,  {{ user }}</div>
     <i class="dropdown icon"></i>
     <div class="menu">
       {{#if currentUser}}
-      <div class="item cas-logout">Logout</div>
+        <div class="item profile">Profile</div>
+        <div class="item help">Help</div>
+        <div class="item cas-logout">Logout</div>
       {{else}}
-      <div class="item cas-login">Login</div>
+        <div class="item cas-login">Login</div>
       {{/if}}
     </div>
   </div>
@@ -14,19 +16,19 @@
 </template>
 
 <!--<template name="Cas_Login">-->
-  <!--<div class="ui simple dropdown item">-->
+<!--<div class="ui simple dropdown item">-->
     <!--{{#if currentUser}}-->
-      <!--<div class="text">Welcome, {{ user }}</div>-->
-      <!--<i class="dropdown icon"></i>-->
-    <!--<div class="menu">-->
-      <!--<div class="item cas-logout">Logout</div>-->
+<!--<div class="text">Welcome, {{ user }}</div>-->
+<!--<i class="dropdown icon"></i>-->
+<!--<div class="menu">-->
+<!--<div class="item cas-logout">Logout</div>-->
     <!--{{else}}-->
-      <!--<div class="text">Welcome</div>-->
-      <!--<i class="dropdown icon"></i>-->
-    <!--<div class="menu">-->
-      <!--<div class="item cas-login">Login</div>-->
+<!--<div class="text">Welcome</div>-->
+<!--<i class="dropdown icon"></i>-->
+<!--<div class="menu">-->
+<!--<div class="item cas-login">Login</div>-->
     <!--{{/if}}-->
-  <!--</div>-->
-  <!--</div>-->
+<!--</div>-->
+<!--</div>-->
 
 <!--</template>-->
