--- a/app/imports/ui/layouts/header.html
+++ b/app/imports/ui/layouts/header.html
@@ -6,11 +6,11 @@
       <div class="item"><h1>Get Good</h1></div>
       <a class="item" href="{{pathFor 'User_Home_Page'}}">Home</a>
       <!--<a class="item" href="{{pathFor 'Admin_Home_Page'}}">Admin Home</a>-->
-      <a class="item" href="{{pathFor 'User_Profile_Page'}}">Profile</a>
+      <!--<a class="item" href="{{pathFor 'User_Profile_Page'}}">Profile</a>-->
       <a class="item" href="{{pathFor 'events'}}">Calendar</a>
       <a class="item" href="{{pathFor 'Rankings_Page'}}">Rankings</a>
       <div class="right item"><p>{{> Cas_Login }}</p></div>
-      <a class="item" href="{{pathFor 'Help_Page'}}">Help</a>
+      <!--<a class="item" href="{{pathFor 'Help_Page'}}">Help</a>-->
       <a>{{> Notify}}</a>
     {{else}}
       <a class="item" href="{{pathFor 'Public_Landing_Page'}}"><h1>Get Good</h1></a>
