--- a/app/imports/ui/layouts/cas-login.html
+++ b/app/imports/ui/layouts/cas-login.html
@@ -1,6 +1,10 @@
 <template name="Cas_Login">
   <div class="ui simple dropdown item">
+    {{#if currentUser}}
     <div class="text">Welcome {{ user }}</div>
+      {{else}}
+    <div class="text">{{ user }}</div>
+      {{/if}}
     <i class="dropdown icon"></i>
     <div class="menu">
       {{#if currentUser}}
