--- a/app/imports/ui/layouts/header.html
+++ b/app/imports/ui/layouts/header.html
@@ -11,8 +11,8 @@
           <h4><a class="item" href="{{pathFor 'User_Home_Page'}}">Home</a></h4>
           <!--<a class="item" href="{{pathFor 'Admin_Home_Page'}}">Admin Home</a>-->
           <h4><a class="item" href="{{pathFor 'User_Profile_Page'}}">Profile</a></h4>
+          <h4><a class="item" href="{{pathFor 'rankings'}}">Ranking</a></h4>
           <h4><a class="item" href="{{pathFor 'events'}}">Calendar</a></h4>
-          <h4></h4>
           <h4><div class="item"><p>{{> Cas_Login }}</p></div></h4>
           <h4><p>{{> Notify}}</p></h4>
           <h4><a class="item" href="{{pathFor 'Help_Page'}}">Help</a></h4>
@@ -23,11 +23,14 @@
     </div>
 
   </div>
+
   <div class="footer">
+
     <div class="user-menu">
       <span class="user-menu_profile-pic"></span>
-      <span class="user-menu_username">User</span>
+      <span class="user-menu_username">{{user}}</span>
     </div>
+
   </div>
 
 
