--- a/app/imports/ui/stylesheets/style.css
+++ b/app/imports/ui/stylesheets/style.css
@@ -161,7 +161,7 @@ body {
 
 /* line 1, ../tests/sass/components/_main.scss */
 .listings {
-  height: 100%;
+  height: 1000px;
   width: 220px;
   float: left;
   color: #ab9ba9;
