--- a/app/imports/ui/layouts/footer.html
+++ b/app/imports/ui/layouts/footer.html
@@ -1,6 +1,6 @@
 <template name="Footer">
   <footer>
-    <div style="padding-top: 15px" class="ui center aligned container">
+    <div style="padding-top: 15px;" class="ui center aligned container">
         <hr>
         Developed by GetGood <br />
         Justin Chock | Dylan Pavao | Anthony Kuloloia | Daniel Koo <br/>
